# pax-codecs

./: .gitmodules  CMakeLists.txt  README.md  Standalone.mk  sources.cmake  standalone.cmake
codec-test-images/: png_test.c  png_test.xcf  png_test_properties.txt
include/: fake_file.h  pax_codecs.h  real_file.h
src/: fake_file.c  pax_codecs.c
